# ChangeLog for media-libs/libpng
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.360 2012/03/31 16:10:02 jer Exp $

  31 Mar 2012; Jeroen Roovers <jer@gentoo.org> libpng-1.5.10.ebuild:
  Stable for HPPA (bug #410153).

*libpng-1.5.10 (30 Mar 2012)
*libpng-1.2.49 (30 Mar 2012)

  30 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> +libpng-1.2.49.ebuild,
  +libpng-1.5.10.ebuild:
  Version bump wrt #410153 by Thomas D.

  03 Mar 2012; Raúl Porcel <armin76@gentoo.org> libpng-1.5.9.ebuild:
  ia64/m68k/s390/sh/sparc stable wrt #404197

  03 Mar 2012; Markus Meier <maekke@gentoo.org> libpng-1.5.9.ebuild:
  arm stable, bug #404197

  02 Mar 2012; Samuli Suominen <ssuominen@gentoo.org> libpng-1.5.9.ebuild:
  ppc64 stable wrt #404197

  02 Mar 2012; Tobias Klausmann <klausman@gentoo.org> libpng-1.5.9.ebuild:
  Stable on alpha, bug #404197

  28 Feb 2012; Brent Baude <ranger@gentoo.org> libpng-1.5.9.ebuild:
  Marking libpng-1.5.9 ppc for bug 404197

  20 Feb 2012; Jeroen Roovers <jer@gentoo.org> libpng-1.5.9.ebuild:
  Stable for HPPA (bug #404197).

  20 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> -libpng-1.2.46.ebuild,
  -libpng-1.4.8-r2.ebuild:
  old

  20 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> libpng-1.2.47.ebuild:
  amd64/x86 stable

*libpng-1.2.47 (20 Feb 2012)

  20 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> +libpng-1.2.47.ebuild:
  Version bump.

  19 Feb 2012; Jeff Horelick <jdhore@gentoo.org> libpng-1.5.9.ebuild:
  marked x86 per security bug 404197

  19 Feb 2012; Agostino Sarubbo <ago@gentoo.org> libpng-1.5.9.ebuild:
  Stable for AMD64, wrt security bug #404197

  19 Feb 2012; Samuli Suominen <ssuominen@gentoo.org> libpng-1.5.9.ebuild:
  Use correct apng patchset for the 1.5.9 release

*libpng-1.5.9 (19 Feb 2012)

  19 Feb 2012; Tim Harder <radhermit@gentoo.org> +libpng-1.5.9.ebuild:
  Version bump.
