@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
 DIST libpng-1.2.47.tar.xz 540604 RMD160 1edb745523b9136669a3a812727dae3a27bd940d SHA1 420ea2d61e9b9de9179248249b9ed84c19e9802f SHA256 7d6b1a2314bdc94397f7e4ecc06ada1c220071906d9d9025203e20fe6d1b51d1
 DIST libpng-1.2.49.tar.xz 538408 RMD160 75f27a3a8140767ce5a5cd3c4b77de48f376dc39 SHA1 0984ab46fbfa5a34ca8d98958eebe5fb52b22294 SHA256 6f5a313225ce8f0d36aceda25b837ad3cb97d0096a97fa23dbc6362f7781d014
@@ -10,16 +10,20 @@ DIST libpng-1.5.8.tar.xz 701716 RMD160 3874906eaf1aca70be9c84052ec2e571ed24f563 
 DIST libpng-1.5.9-apng.patch.gz 10104 RMD160 6c18d1ce45fb5f94e58f2eaaa75732aa939c47bb SHA1 6770825963af2095df907b83194db8978b3bcaed SHA256 4996de4905ed1205418a432fc8aa1317cd36c4d3f6b339b911ec7b1d4170db5c
 DIST libpng-1.5.9.tar.xz 703900 RMD160 3ca3724eb4a4575c0df527ca34c1d58c04c2cafe SHA1 45a8a5c116623d6ab0e2be50f49afacb39a51d46 SHA256 b87374e359db71041a786a1a31ff2c97a85018bde510c31fd90bb6bb8e9da065
 EBUILD libpng-1.2.47.ebuild 861 RMD160 7bd7020b90efb06bb6253d1e3f4801fb3b77c82e SHA1 82934413651bd7531f9f3c6a692af45c1f5d633c SHA256 dfa4c4ce9bcd32fb7b88643df6c767f19bf45bed31539b04a044d8140575c31f
-EBUILD libpng-1.2.49.ebuild 863 RMD160 fb55a0dbf38e2ac9c6b3387f2db12b8e1ed42e70 SHA1 68d0f41587cc4d18f8aff0711e5c7667f9ccfb3c SHA256 0236c7915f9e75f97521fed89479d4169f82db7b0b81f4e1f15f789a2bc6b568
-EBUILD libpng-1.5.10.ebuild 1566 RMD160 509d2f5ece07f3eb395af76bbe7e1efb6d25e019 SHA1 0ce5fdcbc360f0167c3325a05443cfb75342660a SHA256 176b84c243c80cbd718c2a0c224b55a290e6d731b4ac1f4440a994dda6273829
+EBUILD libpng-1.2.49.ebuild 856 RMD160 cec488255406d9aeb413383acac8850635d2ea41 SHA1 411843a337572ad51fdfd4d814148445e009196d SHA256 7d04c57a609da097a0479e078abacffc4b29c330bd2f4e54dce171122faddbc7
+EBUILD libpng-1.5.10.ebuild 1565 RMD160 6f1989f29d2f07076d68fd0ab06b96f37b9c55bb SHA1 cc94a2d7f2b940a1c3d8ef80c511e6cf248e21e5 SHA256 5b72f876d060a57b173fb7ddd2b8f69eea7b229bf2541609db595ff057680870
 EBUILD libpng-1.5.8.ebuild 1668 RMD160 c949bfbbdb1f548e49035ccd55931f6313885186 SHA1 0e2776265b347006b9706148d3a94c664326c47d SHA256 17d7a73e25cc0539438b715fbdb701a151eb993b84c9d9a01fa9b5a29d5b173b
 EBUILD libpng-1.5.9.ebuild 1559 RMD160 cdf55699bfe9ee171aca5db1bf5747277d2afe2d SHA1 bba7c4799ba7081a73af968ecfea6c6f3ed9d3cf SHA256 2fe10fc6fc97ef8076e68d6458a99a7a8a4c07a721f75c6ec88c4be7a4d16b01
-MISC ChangeLog 47385 RMD160 338454666350e46adfcd9e7d717ee251e6a2c23e SHA1 50492fd6c504565a9367fb679d2ce0299133682b SHA256 e4d4efb049d7b5281256a53a13e97612845c9c49f5607bd113a76bdac7a5fbfa
+MISC ChangeLog 47517 RMD160 e951c753ecd63b423fea8225233ed614f9455979 SHA1 4bd705a6dea718aacb0c14ae3e2f20d59a45da8b SHA256 b72a14fcb86d559b28b2e91f67904bd0af67d1c625ef2cf9f3e47a71abef543f
 MISC metadata.xml 247 RMD160 61ce1843d85a1ab05dc7838ac15375b0fb4f35bd SHA1 0a4b634f99126e9ebc485ad949b41df5a11f2fb0 SHA256 6646b71692ca41b7b944a2f6e044942baf8b8258ca073b555160e57b9eb39af8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk93LGAACgkQVWmRsqeSphObsQCfQBi2r5FCCazoEhUx9AZuCw2L
-SpkAn1t5KkSLDLRXw79aKCRoD/H9lobv
-=ovUk
+iQEcBAEBCgAGBQJPedbvAAoJEOTDgjZ80txdrEMIAKv/NvAuulgRPRCF3xZSXIaT
+tIr3XY2AwxLBv/7gz7NUk8jBvvek2cGvJvhY7O/6zURprKoGFDS/ok0FafuMTqM8
+e00SI4AdCCJAe4txTv4Zri5sbz45x1QzQnbOfu8HUpjmunnM/BPOiFHnSURvJ5H8
+dzoqF20sAoUBxnfNnHN0xtWJ901X5Ey9LhNt2vLCdgqOwhXlcXm4JYsmUQyyHHsO
+Pkw7mKezpmWzaIK3hvY6QC2mCjlFbU3RD9dYSlZc6EQaY/8T3urbek71ro0ulkBm
+azcp/Mi4EdTPnNjN9d2arPMT8akmhioAu4ePvdoChjC0i6LA4215YZN0EaOjnd8=
+=LP6G
 -----END PGP SIGNATURE-----
