@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libpng
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.360 2012/03/31 16:10:02 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.361 2012/04/02 16:42:17 ago Exp $
+
+  02 Apr 2012; Agostino Sarubbo <ago@gentoo.org> libpng-1.2.49.ebuild,
+  libpng-1.5.10.ebuild:
+  Stable for amd64, wrt bug #410153
 
   31 Mar 2012; Jeroen Roovers <jer@gentoo.org> libpng-1.5.10.ebuild:
   Stable for HPPA (bug #410153).
